--- a/contacts-page.html
+++ b/contacts-page.html
@@ -33,7 +33,6 @@
 
 					<div class="contacts-table-container">
 						<div class="col-md-12">
-
 							<div class="panel panel-default panel-table">
 								<div class="panel-heading">
 									<div class="row">
@@ -223,6 +222,7 @@
 							</div>
 						</div>
 					</div>
+				</div>
 			</div><!--.container-->
 		</main><!--.main-content-->
 
