--- a/tags-page.html
+++ b/tags-page.html
@@ -28,7 +28,7 @@
 	</div><!--.container-->
 </header><!--.header-->
 
-<main class="main-content" role="main">
+<main class="main-content">
 	<div class="container">
 		<div class="page-content page-content_contacts">
 			<h2 class="page-title page-title_contacts">Теги</h2>
