--- a/contacts-page.html
+++ b/contacts-page.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contacts</title>
 
-	<link rel='stylesheet' href='css/normalize.css' type='text/css' media='all' />
-	<link rel='stylesheet' href='css/bootstrap.min.css' type='text/css' media='all' />
+	<link rel='stylesheet' href='assets/css/normalize.css' type='text/css' media='all' />
+	<link rel='stylesheet' href='assets/css/bootstrap.min.css' type='text/css' media='all' />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 	<link href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
-	<link rel='stylesheet' href='css/main.css' type='text/css' media='all' />
+	<link rel='stylesheet' href='assets/css/main.css' type='text/css' media='all' />
 </head>
 <body>
 <header class="header">
@@ -28,221 +28,220 @@
 	</div><!--.container-->
 </header><!--.header-->
 
-	<main class="main-content">
-		<div class="container">
-			<div class="page-content page-content_contacts">
-				<h2 class="page-title page-title_contacts">База контактов</h2>
+<main class="main-content">
+	<div class="container">
+		<div class="page-content page-content_contacts"><!-- page-content begin -->
+			<h2 class="page-title page-title_contacts">База контактов</h2>
 
-				<div class="contacts-table-container">
-					<div class="col-md-12">
-						<div class="panel panel-default panel-table">
-							<div class="panel-heading">
-								<div class="row">
-									<div class="col col-xs-6">
-										<h3 class="panel-title">Заголовок таблицы</h3>
-									</div>
-									<div class="col col-xs-6 text-end">
-										<button type="button" class="btn btn-sm btn-primary btn-create">Создать</button>
-									</div>
+			<div class="contacts-table-container"><!-- contacts-table-container begin -->
+				<div class="col-md-12"><!-- col-md-12 begin -->
+					<div class="panel panel-default panel-table"><!-- panel begin -->
+						<div class="panel-heading"><!-- panel-heading begin -->
+							<div class="row">
+								<div class="col col-xs-6">
+									<h3 class="panel-title">Заголовок таблицы</h3>
+								</div>
+								<div class="col col-xs-6 text-end">
+									<button type="button" class="btn btn-sm btn-primary btn-create">Создать</button>
 								</div>
 							</div>
-							<div class="panel-body table-responsive">
-								<table class="table table-striped table-bordered table-list table-hover align-middle contacts-table">
-									<thead>
-									<tr>
-										<th class="width-5"><em class="fa fa-cog"></em></th>
-										<th class="hidden-xs width-5">ID</th>
-										<th class="width-20">Имя</th>
-										<th class="width-20">Почта</th>
-										<th class="width-10">Телефон</th>
-										<th class="width-40">Теги</th>
-									</tr>
-									</thead>
-									<tbody>
-									<tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td><input name='tags3' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
-									</tr>
-									<tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr><tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr><tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr><tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr>
-									<tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr>
-									<tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr>
-									<tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr><tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr><tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr>
-									<tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr>
-									<tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr>
-									<tr>
-										<td>
-											<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-											<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-										</td>
-										<td class="hidden-xs">1</td>
-										<td>John Doe</td>
-										<td>johndoe@example.com</td>
-										<td>+7 999 999 99 99</td>
-										<td></td>
-									</tr>
-									</tbody>
-								</table>
-
-							</div>
-							<div class="panel-footer">
-								<div class="row">
-									<div class="col col-xs-4">Страница 1 из 5</div>
-									<div class="col col-xs-8">
-										<nav aria-label="Page navigation example">
-											<ul class="pagination justify-content-end">
-												<li class="page-item disabled">
-													<a class="page-link">Предыдущая</a>
-												</li>
-												<li class="page-item"><a class="page-link" href="#">1</a></li>
-												<li class="page-item"><a class="page-link" href="#">2</a></li>
-												<li class="page-item"><a class="page-link" href="#">3</a></li>
-												<li class="page-item">
-													<a class="page-link" href="#">Следующая</a>
-												</li>
-											</ul>
-										</nav>
-									</div>
+						</div><!-- panel-heading end -->
+						<div class="panel-body table-responsive"><!-- panel-body begin -->
+							<table class="table table-striped table-bordered table-list table-hover align-middle contacts-table">
+								<thead>
+								<tr>
+									<th class="width-5"><em class="fa fa-cog"></em></th>
+									<th class="hidden-xs width-5">ID</th>
+									<th class="width-20">Имя</th>
+									<th class="width-20">Почта</th>
+									<th class="width-10">Телефон</th>
+									<th class="width-40">Теги</th>
+								</tr>
+								</thead>
+								<tbody>
+								<tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input name='tags3' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr><tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr><tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr><tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr><tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr><tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>
+										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td></td>
+								</tr>
+								</tbody>
+							</table>
+						</div><!-- panel-body end -->
+						<div class="panel-footer"><!-- panel-footer begin -->
+							<div class="row">
+								<div class="col col-xs-4">Страница 1 из 5</div>
+								<div class="col col-xs-8">
+									<nav aria-label="Page navigation example">
+										<ul class="pagination justify-content-end">
+											<li class="page-item disabled">
+												<a class="page-link">Предыдущая</a>
+											</li>
+											<li class="page-item"><a class="page-link" href="#">1</a></li>
+											<li class="page-item"><a class="page-link" href="#">2</a></li>
+											<li class="page-item"><a class="page-link" href="#">3</a></li>
+											<li class="page-item">
+												<a class="page-link" href="#">Следующая</a>
+											</li>
+										</ul>
+									</nav>
 								</div>
 							</div>
-						</div>
-					</div>
-				</div><!--.contacts-table-container-->
-			</div><!--.page-content-->
-		</div><!--.container-->
-	</main><!--.main-content-->
+						</div><!-- panel-footer end -->
+					</div><!-- panel end -->
+				</div><!-- col-md-12 end -->
+			</div><!-- contact-table-container end -->
+		</div><!-- page-content end -->
+	</div><!-- container end -->
+</main><!-- main-content end -->
 
-	<footer class="footer" id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col col-12 d-flex justify-content-end">
-					<p class="footer__copyright">Разработчик <a href="https://nikita.global/" target="_blank">nikita.global</a></p>
-				</div>
+<footer class="footer" id="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col col-12 d-flex justify-content-end">
+				<p class="footer__copyright">Разработчик <a href="https://nikita.global/" target="_blank">nikita.global</a></p>
 			</div>
 		</div>
-	</footer><!--.footer-->
-	<button id="scrollToTopBtn" class="scrollToTopBtn">To The Top</button>
-
-	<script src="js/jquery/jquery.js"></script>
-	<script src="js/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
-	<script src="js/app.js"></script>
+	</div>
+</footer><!--.footer-->
+<button id="scrollToTopBtn" class="scrollToTopBtn">To The Top</button>
+<!-- Facta, non verba -->
+<script src="assets/js/jquery/jquery.js"></script>
+<script src="assets/js/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
+<script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+<script src="assets/js/app.js"></script>
 </body>
 </html>
