--- a/tags-page.html
+++ b/tags-page.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tags list</title>
 
-	<link rel='stylesheet' href='css/normalize.css' type='text/css' media='all' />
-	<link rel='stylesheet' href='css/bootstrap.min.css' type='text/css' media='all' />
+	<link rel='stylesheet' href='assets/css/normalize.css' type='text/css' media='all' />
+	<link rel='stylesheet' href='assets/css/bootstrap.min.css' type='text/css' media='all' />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 	<link href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
-	<link rel='stylesheet' href='css/main.css' type='text/css' media='all' />
+	<link rel='stylesheet' href='assets/css/main.css' type='text/css' media='all' />
 </head>
 <body>
 <header class="header">
@@ -28,15 +28,15 @@
 	</div><!--.container-->
 </header><!--.header-->
 
-<main class="main-content">
-	<div class="container">
-		<div class="page-content page-content_contacts">
+<main class="main-content"><!-- main-content begin -->
+	<div class="container"><!-- container begin -->
+		<div class="page-content page-content_contacts"><!-- page-content begin -->
 			<h2 class="page-title page-title_contacts">Теги</h2>
 
-			<div class="contacts-table-container">
-				<div class="col-md-12">
-					<div class="panel panel-default panel-table">
-						<div class="panel-heading">
+			<div class="contacts-table-container"><!-- contact-table-container begin -->
+				<div class="col-md-12"><!-- col-md-12 begin -->
+					<div class="panel panel-default panel-table"><!-- panel begin -->
+						<div class="panel-heading"><!-- panel-heading begin -->
 							<div class="row">
 								<div class="col col-xs-6">
 									<div class="input-group input-group-sm">
@@ -58,8 +58,8 @@
 									<button type="button" class="btn btn-sm btn-primary btn-create">Создать</button>
 								</div>
 							</div>
-						</div>
-						<div class="panel-body table-responsive">
+						</div><!-- panel-heading end -->
+						<div class="panel-body table-responsive"><!-- panel-body begin -->
 							<table class="table table-striped table-bordered table-list table-hover align-middle contacts-table">
 								<thead>
 								<tr>
@@ -141,9 +141,8 @@
 								</tr>
 								</tbody>
 							</table>
-
-						</div>
-						<div class="panel-footer">
+						</div><!-- panel-body end -->
+						<div class="panel-footer"><!-- panel-footer begin -->
 							<div class="row">
 								<div class="col col-xs-4">Страница 1 из 5</div>
 								<div class="col col-xs-8">
@@ -162,13 +161,13 @@
 									</nav>
 								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div><!--.container-->
-</main><!--.main-content-->
+						</div><!-- panel-footer end -->
+					</div><!-- panel end -->
+				</div><!-- col-md-12 end -->
+			</div><!-- contact-table-container end -->
+		</div><!-- page-content end -->
+	</div><!-- container end -->
+</main><!-- main-content end -->
 
 <footer class="footer" id="footer">
 	<div class="container">
@@ -180,11 +179,11 @@
 	</div>
 </footer><!--.footer-->
 <button id="scrollToTopBtn" class="scrollToTopBtn">To The Top</button>
-
-<script src="js/jquery/jquery.js"></script>
-<script src="js/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<!-- Facta, non verba -->
+<script src="assets/js/jquery/jquery.js"></script>
+<script src="assets/js/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
 <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
-<script src="js/app.js"></script>
+<script src="assets/js/app.js"></script>
 </body>
 </html>
