--- a/tags-page.html
+++ b/tags-page.html
@@ -146,7 +146,7 @@
 							<div class="row">
 								<div class="col col-xs-4">Страница 1 из 5</div>
 								<div class="col col-xs-8">
-									<nav aria-label="Page navigation example">
+									<nav aria-label="Page navigation example" role="navigation">
 										<ul class="pagination justify-content-end">
 											<li class="page-item disabled">
 												<a class="page-link">Предыдущая</a>
