--- a/contacts-page.html
+++ b/contacts-page.html
@@ -61,7 +61,7 @@
 								<tbody>
 								<tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -72,7 +72,7 @@
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -82,7 +82,7 @@
 									<td></td>
 								</tr><tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -92,7 +92,7 @@
 									<td></td>
 								</tr><tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -102,7 +102,7 @@
 									<td></td>
 								</tr><tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -113,7 +113,7 @@
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -124,7 +124,7 @@
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -135,7 +135,7 @@
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -145,7 +145,7 @@
 									<td></td>
 								</tr><tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -155,7 +155,7 @@
 									<td></td>
 								</tr><tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -166,7 +166,7 @@
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -177,7 +177,7 @@
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
@@ -188,7 +188,7 @@
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
 									<td class="hidden-xs">1</td>
