--- a/tags-page.html
+++ b/tags-page.html
@@ -38,7 +38,7 @@
 					<div class="panel panel-default panel-table"><!-- panel begin -->
 						<div class="panel-heading"><!-- panel-heading begin -->
 							<div class="row">
-								<div class="col col-xs-6">
+								<div class="col col-sm-6 col-12 text-sm-center gy-2">
 									<div class="input-group input-group-sm">
 										<input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
 										<button type="button" class="btn btn-outline-secondary">Поиск</button>
@@ -52,7 +52,7 @@
 										</ul>
 									</div>
 								</div>
-								<div class="col col-xs-6 text-end">
+								<div class="col col-sm-6 text-end col-12 gy-2">
 									<button type="button" class="btn btn-sm btn-primary btn-create">Выбрать все</button>
 									<button class="btn btn-sm btn-danger disabled"><em class="fa fa-trash"></em></button>
 									<button type="button" class="btn btn-sm btn-primary btn-create">Создать</button>
@@ -60,7 +60,7 @@
 							</div>
 						</div><!-- panel-heading end -->
 						<div class="panel-body table-responsive"><!-- panel-body begin -->
-							<table class="table table-striped table-bordered table-list table-hover align-middle contacts-table">
+							<table class="table table-striped table-bordered table-list table-hover align-middle tags-table">
 								<thead>
 								<tr>
 									<th class="width-5">Выбрать</th>
@@ -144,8 +144,8 @@
 						</div><!-- panel-body end -->
 						<div class="panel-footer"><!-- panel-footer begin -->
 							<div class="row">
-								<div class="col col-xs-4">Страница 1 из 5</div>
-								<div class="col col-xs-8">
+								<div class="col col-xs-4 col-sm-12 text-sm-center">Страница 1 из 5</div>
+								<div class="col col-xs-8 col-sm-12 text-sm-center">
 									<nav aria-label="Page navigation example" role="navigation">
 										<ul class="pagination justify-content-end">
 											<li class="page-item disabled">
