--- a/contacts-page.html
+++ b/contacts-page.html
@@ -21,7 +21,7 @@
 		</label>
 		<nav class="main-nav">
 			<ul>
-				<li><a href="#">Контакты</a></li>
+				<li><a href="#" class="active">Контакты</a></li>
 				<li><a href="#">Теги</a></li>
 			</ul>
 		</nav>
@@ -202,8 +202,8 @@
 						</div><!-- panel-body end -->
 						<div class="panel-footer"><!-- panel-footer begin -->
 							<div class="row">
-								<div class="col col-xs-4">Страница 1 из 5</div>
-								<div class="col col-xs-8">
+								<div class="col col-12 col-sm-4">Страница 1 из 5</div>
+								<div class="col col-12 col-sm-8 text-sm-center">
 									<nav aria-label="Page navigation example" role="navigation">
 										<ul class="pagination justify-content-end">
 											<li class="page-item disabled">
