--- a/tags-page.html
+++ b/tags-page.html
@@ -22,7 +22,7 @@
 		<nav class="main-nav">
 			<ul>
 				<li><a href="#">Контакты</a></li>
-				<li><a href="#">Теги</a></li>
+				<li><a href="#" class="active">Теги</a></li>
 			</ul>
 		</nav>
 	</div><!--.container-->
@@ -144,8 +144,8 @@
 						</div><!-- panel-body end -->
 						<div class="panel-footer"><!-- panel-footer begin -->
 							<div class="row">
-								<div class="col col-xs-4 col-sm-12 text-sm-center">Страница 1 из 5</div>
-								<div class="col col-xs-8 col-sm-12 text-sm-center">
+								<div class="col col-12 col-sm-4">Страница 1 из 5</div>
+								<div class="col col-12 col-sm-8 text-sm-center">
 									<nav aria-label="Page navigation example" role="navigation">
 										<ul class="pagination justify-content-end">
 											<li class="page-item disabled">
