--- a/contacts-page.html
+++ b/contacts-page.html
@@ -38,10 +38,30 @@
 					<div class="panel panel-default panel-table"><!-- panel begin -->
 						<div class="panel-heading"><!-- panel-heading begin -->
 							<div class="row">
-								<div class="col col-xs-6">
-									<h3 class="panel-title">Заголовок таблицы</h3>
+								<div class="col col-sm-6 col-12 text-sm-center gy-2">
+									<form action="#">
+										<div class="mb-3">
+											<input class="form-control form-control-sm" type="file" id="formFile">
+										</div>
+
+										<div class="input-group input-group-sm">
+											<input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+											<button type="button" class="btn btn-outline-secondary">Поиск</button>
+											<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+												<span class="visually-hidden">Toggle Dropdown</span>
+											</button>
+											<ul class="dropdown-menu dropdown-menu-end">
+												<li><a class="dropdown-item" href="#">Фильтр 1</a></li>
+												<li><a class="dropdown-item" href="#">Фильтр 2</a></li>
+												<li><a class="dropdown-item" href="#">Фильтр 3</a></li>
+											</ul>
+										</div>
+									</form>
 								</div>
-								<div class="col col-xs-6 text-end">
+								<div class="col col-sm-6 text-end col-12 gy-2">
+									<button type="button" class="btn btn-sm btn-primary btn-create">Выбрать все</button>
+									<button class="btn btn-sm btn-primary disabled"><em class="fa fa-pencil"></em></button>
+									<button class="btn btn-sm btn-danger disabled"><em class="fa fa-trash"></em></button>
 									<button type="button" class="btn btn-sm btn-primary btn-create">Создать</button>
 								</div>
 							</div>
@@ -50,9 +70,10 @@
 							<table class="table table-striped table-bordered table-list table-hover align-middle contacts-table">
 								<thead>
 								<tr>
-									<th class="width-5"><em class="fa fa-cog"></em></th>
+									<th class="width-5"><em class="fa fa-check"></em></th>
+									<th class="width-10"><em class="fa fa-cog"></em></th>
 									<th class="hidden-xs width-5">ID</th>
-									<th class="width-20">Имя</th>
+									<th class="width-10">Имя</th>
 									<th class="width-20">Почта</th>
 									<th class="width-10">Телефон</th>
 									<th class="width-40">Теги</th>
@@ -61,16 +82,12 @@
 								<tbody>
 								<tr>
 									<td>
-										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
-										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+										<div class="form-check">
+										<label class="form-check-label">
+											<input class="form-check-input" type="checkbox" value="">
+										</label>
+									</div>
 									</td>
-									<td class="hidden-xs">1</td>
-									<td>John Doe</td>
-									<td>johndoe@example.com</td>
-									<td>+7 999 999 99 99</td>
-									<td><input name='tags3' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
-								</tr>
-								<tr>
 									<td>
 										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
@@ -79,18 +96,69 @@
 									<td>John Doe</td>
 									<td>johndoe@example.com</td>
 									<td>+7 999 999 99 99</td>
-									<td></td>
+									<td><input class="tags" name='tags1' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input class="tags" name='tags2' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input class="tags" name='tags3' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input class="tags" name='tags4' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
 								</tr><tr>
 									<td>
-										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
-										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
 									</td>
-									<td class="hidden-xs">1</td>
-									<td>John Doe</td>
-									<td>johndoe@example.com</td>
-									<td>+7 999 999 99 99</td>
-									<td></td>
-								</tr><tr>
 									<td>
 										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
@@ -99,20 +167,17 @@
 									<td>John Doe</td>
 									<td>johndoe@example.com</td>
 									<td>+7 999 999 99 99</td>
-									<td></td>
-								</tr><tr>
-									<td>
-										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
-										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-									</td>
-									<td class="hidden-xs">1</td>
-									<td>John Doe</td>
-									<td>johndoe@example.com</td>
-									<td>+7 999 999 99 99</td>
-									<td></td>
+									<td><input class="tags" name='tags5' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
 								</tr>
 								<tr>
 									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
 										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
@@ -120,10 +185,17 @@
 									<td>John Doe</td>
 									<td>johndoe@example.com</td>
 									<td>+7 999 999 99 99</td>
-									<td></td>
+									<td><input class="tags" name='tags6' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
 								</tr>
 								<tr>
 									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
 										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
 									</td>
@@ -131,19 +203,16 @@
 									<td>John Doe</td>
 									<td>johndoe@example.com</td>
 									<td>+7 999 999 99 99</td>
-									<td></td>
+									<td><input class="tags" name='tags7' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
-										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
 									</td>
-									<td class="hidden-xs">1</td>
-									<td>John Doe</td>
-									<td>johndoe@example.com</td>
-									<td>+7 999 999 99 99</td>
-									<td></td>
-								</tr><tr>
 									<td>
 										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
@@ -152,30 +221,16 @@
 									<td>John Doe</td>
 									<td>johndoe@example.com</td>
 									<td>+7 999 999 99 99</td>
-									<td></td>
-								</tr><tr>
-									<td>
-										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
-										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-									</td>
-									<td class="hidden-xs">1</td>
-									<td>John Doe</td>
-									<td>johndoe@example.com</td>
-									<td>+7 999 999 99 99</td>
-									<td></td>
+									<td><input class="tags" name='tags8' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
 								</tr>
 								<tr>
 									<td>
-										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
-										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
 									</td>
-									<td class="hidden-xs">1</td>
-									<td>John Doe</td>
-									<td>johndoe@example.com</td>
-									<td>+7 999 999 99 99</td>
-									<td></td>
-								</tr>
-								<tr>
 									<td>
 										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
@@ -184,9 +239,16 @@
 									<td>John Doe</td>
 									<td>johndoe@example.com</td>
 									<td>+7 999 999 99 99</td>
-									<td></td>
+									<td><input class="tags" name='tags9' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
 								</tr>
 								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
 									<td>
 										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
 										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
@@ -195,7 +257,97 @@
 									<td>John Doe</td>
 									<td>johndoe@example.com</td>
 									<td>+7 999 999 99 99</td>
-									<td></td>
+									<td><input class="tags" name='tags10' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input class="tags" name='tags11' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input class="tags" name='tags12' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input class="tags" name='tags13' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input class="tags" name='tags14' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
+								</tr>
+								<tr>
+									<td>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+											</label>
+										</div>
+									</td>
+									<td>
+										<a class="btn btn-primary"><em class="fa fa-pencil"></em></a>
+										<a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+									</td>
+									<td class="hidden-xs">1</td>
+									<td>John Doe</td>
+									<td>johndoe@example.com</td>
+									<td>+7 999 999 99 99</td>
+									<td><input class="tags" name='tags15' value='[{"value":"point"}, {"value":"soft"}]' pattern='^[A-Za-z_✲ ]{1,15}$'></td>
 								</tr>
 								</tbody>
 							</table>
@@ -236,7 +388,7 @@
 		</div>
 	</div>
 </footer><!--.footer-->
-<button id="scrollToTopBtn" class="scrollToTopBtn">To The Top</button>
+<button id="scrollToTopBtn">To The Top</button>
 <!-- Facta, non verba -->
 <script src="assets/js/jquery/jquery.js"></script>
 <script src="assets/js/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
