--- a/tags-page.html
+++ b/tags-page.html
@@ -178,7 +178,7 @@
 		</div>
 	</div>
 </footer><!--.footer-->
-<button id="scrollToTopBtn" class="scrollToTopBtn">To The Top</button>
+<button id="scrollToTopBtn">To The Top</button>
 <!-- Facta, non verba -->
 <script src="assets/js/jquery/jquery.js"></script>
 <script src="assets/js/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
