--- a/contacts-page.html
+++ b/contacts-page.html
@@ -42,6 +42,7 @@
 									<form action="#">
 										<div class="mb-3">
 											<div class="input-group input-group-sm">
+												<button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon03">Загрузить</button>
 												<input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
 												<button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Выгрузить</button>
 											</div>
@@ -437,20 +438,7 @@
 			<div class="modal-body">
 				<form>
 					<div class="mb-3">
-						<label for="tagToEdit1" class="col-form-label">Тег:</label>
-						<input type="text" class="form-control" id="tagToEdit1">
-					</div>
-					<div class="mb-3">
-						<label for="tagToEdit1" class="col-form-label">Тег:</label>
-						<input type="text" class="form-control" id="tagToEdit2">
-					</div>
-					<div class="mb-3">
-						<label for="tagToEdit1" class="col-form-label">Тег:</label>
-						<input type="text" class="form-control" id="tagToEdit3">
-					</div>
-					<div class="mb-3">
-						<label for="tagToEdit1" class="col-form-label">Тег:</label>
-						<input type="text" class="form-control" id="tagToEdit4">
+						<input name='basic' value='tag1, tag2, tag3, tag4, tag5, tag6, tag7, tag8'>
 					</div>
 				</form>
 			</div>
